--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_42_logo"
         android:supportsRtl="true"
+        android:theme="@style/DarkTheme"
         tools:targetApi="31">
         <activity
             android:name=".Activities.BaseActivity"
